2010-09-07 Jiri Olsa <olsajiri@gmail.com>
	* adding stack limits dynamic check
		- based on proposal from Akos Pasztory
		- enabled by default, disable by new '-Y' option

2010-08-05  Jiri Olsa <olsajiri@gmail.com>
	* changed config file magic defines
	* separate arguments display code, so it could be
	  disabled for not supported architectures
	* updating license info

2010-07-02  Jiri Olsa <olsajiri@gmail.com>
	* fixing output for thread applications
	  - proper tid displayed for pipe mode
	  - proper indentation for pipe mode

2010-06-03  Jiri Olsa <olsajiri@gmail.com>
	* changing permissions of libltaudit.so to 755

-------------------------------------------------------------------------------
latrace 0.5.9

2010-05-11  Jiri Olsa <olsajiri@gmail.com>
	* 0.5.9 release changes

2010-05-07  Jiri Olsa <olsajiri@gmail.com>
	* fix autoconf search for iberty lib
	* Akos Pasztory <akos.pasztory@gmail.com>
		- debian/rules made executable
		- check for libiberty_pic and libiberty in this order

2010-04-29  Jiri Olsa <olsajiri@gmail.com>
	* refactoring sysdep configuration

-------------------------------------------------------------------------------
latrace 0.5.8

2010-04-19  Jiri Olsa <olsajiri@gmail.com>
	* 0.5.8 release changes

2009-04-08  Jiri Olsa <olsajiri@gmail.com>
	* fixed enum handling (strtol failure)
	* added support for enum string refference definition

2009-03-01  Jiri Olsa <olsajiri@gmail.com>
	* Akos Pasztory <akos.pasztory@gmail.com>
	* added checks for asciidoc and xmlto
	* added check for liberty-pic
	* updated .gitignore
	* shlib doesn't need to be executable
	* added Debian packaging
	* relaxed binutils-dev dependency
	* generate conffiles automatically
	* debian pkg docbook-xsl and docbook-xml

2010-02-28  Jiri Olsa <olsajiri@gmail.com>
	* controled config bug fix
	* liberty controled by autoconf now

2010-02-13  Jiri Olsa <olsajiri@gmail.com>
	* controled config feature
	* disable auditing feature

2010-02-12  Jiri Olsa <olsajiri@gmail.com>